# CI-CD-Lab

./: .gitignore  CMakeLists.txt
.github/workflows/: ci-cd.yml
src/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
tests/: test_bigint.cpp
